<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginCard"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="10dp"
            android:text="@string/to_continue" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_marginRight="5dp">

            <EditText
                android:id="@+id/full_name"
                style="@style/modifiedEditText"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/select_Country"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/textColorSecondary" />

        <Spinner
            android:id="@+id/country"
            style="@style/spinner_style"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />


        <TextView
            style="@style/parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/when_you_were_born"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/textColorSecondary" />

        <DatePicker
            android:id="@+id/birth_day"
            style="@style/parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:endYear="2019"
            android:startYear="1900" />

        <LinearLayout
            style="@style/parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapSize"
                android:layout_gravity="left"
                android:fontFamily="@font/opensans_regular"
                android:paddingStart="12dp"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorGray"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/WrapSize"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/male"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <RadioButton
                    style="@style/WrapSize"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/female"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/set_up_button"
            style="@style/loginButton"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/next" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
